syntax = "proto3";
package protobuf.data;

message SmallStructure {
    int32 val1 = 1;
    string val2 = 2;
    int64 val3 = 3;
    uint64 val4 = 4;
}

message MidUser {
    uint64 id = 1;
    string username = 2;
    string password = 3;
    uint64 date_of_birth = 4;
    uint32 age = 5;
    string first_name = 6;
    string last_name = 7;
    string alias = 8;
    string email = 9;
}

message LargeUser {
    uint64 id = 1;
    string username = 2;
    string password = 3;
    uint64 date_of_birth = 4;
    uint32 age = 5;
    string first_name = 6;
    string last_name = 7;
    string alias = 8;
    string email = 9;
    repeated BankAccount accounts = 10;
    repeated Notification notifications = 11;

    enum AccountType {
        TRADING = 0;
        GIRO = 1;
        SAVING = 2;
        INVEST = 3;
        CREDIT = 4;
    }

    message BankAccount {
        uint64 id = 1;
        string name = 2;
        string iban = 3;
        AccountType account_type = 4;
        int32 balance = 5;
        repeated Transaction transactions = 6;

        message Transaction {
            uint64 id = 1;
            string to_name = 2;
            string to_swift = 3;
            int32 amount = 4;
            bool is_realtime = 5;
            uint64 execution_date = 6;
        }
    }


    message Notification {
        uint64 id = 1;
        string from = 2;
        string content = 3;
        uint64 date = 4;
    }
}
